<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_more"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MoreActivity"
    tools:showIn="@layout/activity_more">

    <TextView
        android:id="@+id/connect_home_net"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_list"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:onClick="onClick"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/connect_home_net"
        android:textAppearance="@android:style/TextAppearance" />

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_list"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:onClick="onClick"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/reset"
        android:textAppearance="@android:style/TextAppearance" />

    <Space
        android:layout_width="0dp"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_list"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:onClick="onClick"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/information"
        android:textAppearance="@android:style/TextAppearance" />

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp" />
</LinearLayout>