<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucence_black"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/layout_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/drawable_round_rectangle"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_alert"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/drawable_round_rectangle"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/soft_white"
            tools:message="@string/device_not_found" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_retry"
                style="@style/ButtonStyle"
                android:text="@string/retry" />

            <Space
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/btn_close"
                style="@style/ButtonStyle"
                android:text="@string/close" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>